# web-autotests-ecosia

./: pyproject.toml
tests/: test_ecosia.py  test_web_autotests_ecosia.py
